refactor: portal reports page

--- a/src/app/modules/portal/pages/cash-registers/cash-registers.component.html
+++ b/src/app/modules/portal/pages/cash-registers/cash-registers.component.html
@@ -1,4 +1,4 @@
-<app-spinner *ngIf="loading(); else body" />
+<app-loading *ngIf="loading(); else body" />
 <ng-template #body>
   <router-outlet />
 </ng-template>
