update: movements justify style

--- a/src/app/modules/admin/pages/movements/movements.component.html
+++ b/src/app/modules/admin/pages/movements/movements.component.html
@@ -4,7 +4,7 @@
     hTitle="Movimientos"
     hDescription="Aquí podrás ver detalladamente todos los movimientos de todos tus productos disponibles y generar reportes en formato PDF"
   />
-  <div class="flex items-start justify-around">
+  <div class="flex items-start justify-center gap-10">
     <app-rounded-section headline="Productos">
       <app-movement-products-list [products]="products()" />
     </app-rounded-section>
