--- a/src/app/modules/admin/pages/dashboard/components/header-stats/header-stats.component.html
+++ b/src/app/modules/admin/pages/dashboard/components/header-stats/header-stats.component.html
@@ -1,5 +1,5 @@
 <header
-  class="relative py-10 px-12 w-full border-t-0 border-b-2 border-x-2 border-violet-100 bg-violet-100 rounded-bl-3xl rounded-br-3xl"
+  class="relative pt-9 pb-10 px-12 w-full border-t-0 border-b-2 border-x-2 border-violet-100 bg-violet-100 rounded-bl-3xl rounded-br-3xl"
 >
   <h2 class="uppercase text-3xl font-medium text-gray-700 mb-5">
     Panel de Estadísticas
@@ -7,11 +7,23 @@
   <div class="flex items-center justify-between gap-7">
     <app-header-stat-card
       stat="Saldo Total"
-      [value]="dashboard()?.totalBalance ?? 0"
+      [value]="dashboard()?.totalBalance"
       color="green"
     />
-    <app-header-stat-card stat="Saldo en Caja" [value]="0" color="gray" />
-    <app-header-stat-card stat="Ganancias" [value]="0" color="green" />
-    <app-header-stat-card stat="Transacciones" [value]="0" color="violet" />
+    <app-header-stat-card
+      stat="Gastos"
+      [value]="dashboard()?.expenses"
+      color="red"
+    />
+    <app-header-stat-card
+      stat="Ganancias"
+      [value]="dashboard()?.earnings"
+      color="green"
+    />
+    <app-header-stat-card
+      stat="Transacciones"
+      [value]="dashboard()?.transactionsAmount"
+      color="violet"
+    />
   </div>
 </header>
