--- a/src/app/modules/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.html
@@ -1,3 +1,6 @@
-<app-header-stats />
-<div class="my-10"></div>
-<app-cash-box-stats />
+<app-loading *ngIf="loading(); else page" />
+<ng-template #page>
+  <app-header-stats />
+  <div class="my-10"></div>
+  <app-cash-box-stats />
+</ng-template>
