--- a/src/app/modules/admin/pages/dashboard/components/header-stat-card/header-stat-card.component.html
+++ b/src/app/modules/admin/pages/dashboard/components/header-stat-card/header-stat-card.component.html
@@ -4,7 +4,16 @@
   <h2 class="text-gray-700 text-center uppercase font-medium">
     {{ stat }}
   </h2>
-  <p class="text-2xl text-center font-bold" [ngClass]="mapColor">
+  <p
+    class="text-2xl text-center font-bold"
+    [ngClass]="mapColor"
+    *ngIf="format; else noFormat"
+  >
     {{ value ?? 0 | currency : "symbol" : "$" : "0.00" }}
   </p>
+  <ng-template #noFormat>
+    <p class="text-2xl text-center font-bold" [ngClass]="mapColor">
+      {{ value ?? 0 }}
+    </p>
+  </ng-template>
 </article>
