update: cash register detail admin reports

--- a/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/header-stats/header-stats.component.html
+++ b/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/header-stats/header-stats.component.html
@@ -21,7 +21,7 @@
       [value]="reports?.withdrawals ?? 0"
       color="red"
     />
-    <app-stat-card stat="Extras" [value]="0" color="green" />
+    <app-stat-card stat="Extras" [value]="reports?.earnings" color="green" />
     <app-stat-card stat="Saldo en Caja" [value]="reports?.balance ?? 0" />
   </div>
 </header>
