refactor: my cash registers page

--- a/src/app/modules/portal/pages/cash-registers/pages/my-cash-registers/my-cash-registers.component.html
+++ b/src/app/modules/portal/pages/cash-registers/pages/my-cash-registers/my-cash-registers.component.html
@@ -1,132 +1,9 @@
-<ng-template #noTime>--:-- --</ng-template>
-<header
-  class="relative rounded-b-2xl shadow-sm px-10 pt-5 pb-20 bg-violet-200 space-y-5"
->
-  <div class="flex items-center justify-between">
-    <div class="flex flex-col gap-1">
-      <h3 class="text-gray-700 text-3xl font-medium">
-        Caja
-        {{
-          currentCashRegister()?.cashRegisterDetail?.cashRegister?.numeral ?? ""
-        }}
-      </h3>
-      <div class="text-gray-600 flex items-center gap-7">
-        <p>
-          Entrada:
-          <span
-            class="text-gray-700"
-            *ngIf="
-              currentCashRegister()?.cashRegisterDetail?.initialWorking;
-              else noTime
-            "
-            >{{
-              currentCashRegister()?.cashRegisterDetail?.initialWorking
-                | date : "hh:mm a"
-            }}</span
-          >
-        </p>
-        <div class="h-5 w-px bg-violet-400"></div>
-        <p>
-          Almuerzo:
-          <span
-            class="text-gray-700"
-            *ngIf="
-              currentCashRegister()?.cashRegisterDetail?.initialBreak;
-              else noTime
-            "
-            >{{
-              currentCashRegister()?.cashRegisterDetail?.initialBreak
-                | date : "hh:mm a"
-            }}</span
-          >
-          -
-          <span
-            class="text-gray-700"
-            *ngIf="
-              currentCashRegister()?.cashRegisterDetail?.finalBreak;
-              else noTime
-            "
-            >{{
-              currentCashRegister()?.cashRegisterDetail?.finalBreak
-                | date : "hh:mm a"
-            }}</span
-          >
-        </p>
-        <div class="h-5 w-px bg-violet-400"></div>
-        <p>
-          Salida:
-          <span
-            class="text-gray-700"
-            *ngIf="
-              currentCashRegister()?.cashRegisterDetail?.finalWorking;
-              else noTime
-            "
-            >{{
-              currentCashRegister()?.cashRegisterDetail?.finalWorking
-                | date : "hh:mm a"
-            }}</span
-          >
-        </p>
-      </div>
-    </div>
-    <form>
-      <label for="selectCashRegister" class="sr-only"
-        >Selecciona una caja</label
-      >
-      <select
-        id="selectCashRegister"
-        class="input shadow w-36"
-        (change)="handleSelectedCashRegister($event)"
-      >
-        <option
-          [value]="i"
-          *ngFor="
-            let report of myCashRegisters()?.cashRegisterDetailsReports;
-            index as i
-          "
-          [selected]="i === currentCashRegisterIndex()"
-        >
-          Caja {{ report.cashRegisterDetail.cashRegister.numeral }}
-        </option>
-        <option
-          value="all"
-          *ngIf="(myCashRegisters()?.cashRegisterDetailsReports)!.length > 1"
-        >
-          Todas
-        </option>
-      </select>
-    </form>
-  </div>
-  <div class="absolute left-7 right-7 grid grid-cols-3 gap-11">
-    <div class="card flex flex-col gap-3">
-      <h3 class="text-lg text-gray-700 font-medium">Saldo en caja</h3>
-      <p class="text-2xl text-gray-700 text-right font-medium">
-        {{
-          currentCashRegister()?.balance ?? 0
-            | currency : "symbol" : "$" : "0.00"
-        }}
-      </p>
-    </div>
-    <div class="card flex flex-col gap-3">
-      <h3 class="text-lg text-gray-700 font-medium">Depósitos</h3>
-      <p class="text-2xl text-green-700 text-right font-medium">
-        {{
-          currentCashRegister()?.deposits ?? 0
-            | currency : "symbol" : "$" : "0.00"
-        }}
-      </p>
-    </div>
-    <div class="card flex flex-col gap-3">
-      <h3 class="text-lg text-gray-700 font-medium">Retiros</h3>
-      <p class="text-2xl text-red-700 text-right font-medium">
-        {{
-          currentCashRegister()?.withdrawals ?? 0
-            | currency : "symbol" : "$" : "0.00"
-        }}
-      </p>
-    </div>
-  </div>
-</header>
+<app-my-stats-header
+  [currentCashRegister]="currentCashRegister()"
+  [currentCashRegisterIndex]="currentCashRegisterIndex()"
+  [myCashRegisters]="myCashRegisters()"
+  (handleSelectedCashRegister)="handleSelectedCashRegister($event)"
+/>
 <section class="w-full mt-32 grid grid-cols-5 place-items-center gap-7">
   <div class="col-span-1">
     <app-icon-button
