--- a/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/header-stats/header-stats.component.html
+++ b/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/header-stats/header-stats.component.html
@@ -1,5 +1,6 @@
 <header
-  class="bg-white border-4 border-dashed border-violet-200 px-9 py-7 rounded-3xl"
+  class="bg-white border-4 border-dashed border-violet-200 px-9 py-7 rounded-3xl hover:scale-[1.005] duration-150 cursor-pointer"
+  (click)="emitOpen()"
 >
   <h2
     class="text-2xl text-gray-600 font-medium uppercase flex items-center justify-between mb-3"
