update: some adm item card properties

--- a/src/app/modules/admin/pages/administration/pages/cash-registers/cash-registers.component.html
+++ b/src/app/modules/admin/pages/administration/pages/cash-registers/cash-registers.component.html
@@ -25,7 +25,7 @@
   >
     <app-adm-item-card
       [showDropdown]="pendingIndex() === i"
-      [options]="options"
+      [options]="pendingOptions"
       [finalBalance]="
         detail.finalBase! > 0 ? detail.finalBase! : detail.initialBase
       "
