refactor: move pipes from core to shared module and create new custom table, use it on admin tables

--- a/src/app/modules/admin/admin.component.html
+++ b/src/app/modules/admin/admin.component.html
@@ -1,5 +1,7 @@
-<app-header></app-header>
-<app-navbar></app-navbar>
-<main class="ml-56 w-[calc(100%-14rem)] min-h-[calc(100vh-4rem)] px-6 pb-5">
-  <router-outlet></router-outlet>
+<app-header />
+<app-navbar />
+<main
+  class="ml-56 mt-16 w-[calc(100%-14rem)] min-h-[calc(100vh-5.5rem)] px-6 pb-5"
+>
+  <router-outlet />
 </main>
