--- a/src/app/modules/admin/pages/dashboard/components/safes-stats-table/safes-stats-table.component.html
+++ b/src/app/modules/admin/pages/dashboard/components/safes-stats-table/safes-stats-table.component.html
@@ -1,26 +1,1 @@
-<div class="table">
-  <table>
-    <thead>
-      <tr>
-        <th class="id">ID</th>
-        <th class="text-center">Número de caja</th>
-        <th class="text-center">Transferencias</th>
-        <th class="text-right">Base Inicial</th>
-        <th class="text-right">Base Final</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let detail of dashboard()?.safeDetails">
-        <td class="id">{{ detail.id }}</td>
-        <td class="text-center">{{ detail.safe.numeral }}</td>
-        <td class="text-center">0</td>
-        <td class="text-right">
-          {{ detail.initialBase | currency : "symbol" : "$" : "0.00" }}
-        </td>
-        <td class="text-right">
-          {{ detail.finalBase | currency : "symbol" : "$" : "0.00" }}
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<app-custom-table [table]="table" />
