--- a/src/app/modules/admin/pages/home/pages/cash-registers/components/cash-registers-table/cash-registers-table.component.html
+++ b/src/app/modules/admin/pages/home/pages/cash-registers/components/cash-registers-table/cash-registers-table.component.html
@@ -1,27 +1,1 @@
-<div class="table">
-  <table>
-    <thead>
-      <tr>
-        <th class="id">ID</th>
-        <th class="text-center size-fit">Número de caja</th>
-        <th>Descripción</th>
-        <th>Estado</th>
-        <th>Fecha de creación</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr
-        *ngFor="let cashRegister of cashRegisters()"
-        class="cursor-pointer"
-        (click)="goToMovements(cashRegister.id)"
-      >
-        <td class="id">{{ cashRegister.id }}</td>
-        <td class="text-center">{{ cashRegister.numeral }}</td>
-        <td>{{ cashRegister.description }}</td>
-        <td>{{ cashRegister.status | cashRegisterStatus }}</td>
-        <td>{{ cashRegister.createdDate | date }}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<app-custom-table [table]="table" />
