--- a/src/app/modules/admin/pages/home/pages/platforms/platforms.component.html
+++ b/src/app/modules/admin/pages/home/pages/platforms/platforms.component.html
@@ -13,6 +13,6 @@ sus saldos y transferencias"
   </h3>
   <div class="px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg">
     <app-spinner *ngIf="loading()"></app-spinner>
-    <app-platforms-list *ngIf="!loading()"></app-platforms-list>
+    <app-platforms-table *ngIf="!loading()"></app-platforms-table>
   </div>
 </section>
