--- a/src/app/modules/admin/pages/home/pages/safes/components/safes-table/safes-table.component.html
+++ b/src/app/modules/admin/pages/home/pages/safes/components/safes-table/safes-table.component.html
@@ -1,26 +1,1 @@
-<app-spinner *ngIf="loading(); else table" />
-<ng-template #table>
-  <div class="table" *ngIf="safes().length >= 1; else norows">
-    <table>
-      <thead>
-        <tr>
-          <th class="id">ID</th>
-          <th class="text-center">Número de caja</th>
-          <th>Fecha de creación</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let safe of safes()">
-          <td class="id">{{ safe.id }}</td>
-          <td class="text-center">{{ safe.numeral }}</td>
-          <td>{{ safe.createdDate | date }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <ng-template #norows>
-    <p class="text-center text-gray-800 font-medium">
-      No hay cajas fuertes registradas...
-    </p>
-  </ng-template>
-</ng-template>
+<app-custom-table [table]="table" />
