--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header
-  class="w-full h-16 sticky left-0 top-0 right-0 z-40 px-5 bg-violet-800 drop-shadow-xl flex items-center"
+  class="w-full h-16 fixed left-0 top-0 right-0 z-40 px-5 bg-violet-800 drop-shadow-xl flex items-center"
 >
   <ul class="flex items-center justify-between w-full text-gray-300">
     <li class="flex items-center gap-2 px-4 py-2">
