--- a/src/app/modules/admin/pages/home/pages/users/users.component.html
+++ b/src/app/modules/admin/pages/home/pages/users/users.component.html
@@ -1,7 +1,7 @@
 <app-header-title
   hTitle="Usuarios"
   hDescription="Aquí podrás administrar todo tipo de usuarios vinculados con la empresa mediante roles"
-></app-header-title>
+/>
 <section class="mt-10">
   <div class="px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg">
     <h3 class="text-2xl text-gray-700 font-medium mb-3">
@@ -9,15 +9,15 @@
     </h3>
     <div class="flex flex-col gap-3">
       <div class="flex items-center justify-between">
-        <app-filter-by-role></app-filter-by-role>
+        <app-filter-by-role />
         <app-button type="button" (click)="toggleShowSideBar()"
           >Añadir usuario</app-button
         >
       </div>
       <div class="divider"></div>
-      <app-filter-by-enabled></app-filter-by-enabled>
-      <app-spinner *ngIf="loading()"></app-spinner>
-      <app-users-list *ngIf="!loading()"></app-users-list>
+      <app-filter-by-enabled />
+      <app-spinner *ngIf="loading()" />
+      <app-users-table *ngIf="!loading()" />
     </div>
   </div>
 </section>
@@ -28,5 +28,5 @@
   <h4 class="text-xl text-gray-800 font-medium px-5 mb-3">
     Registro de usuario
   </h4>
-  <app-new-user-form (onCancel)="cancelRegister()"></app-new-user-form>
+  <app-new-user-form (onCancel)="cancelRegister()" />
 </aside>
