--- a/src/app/modules/portal/pages/home/pages/expenses/components/expenses-table/expenses-table.component.html
+++ b/src/app/modules/portal/pages/home/pages/expenses/components/expenses-table/expenses-table.component.html
@@ -1,24 +1,1 @@
-<div class="table">
-  <table>
-    <thead>
-      <tr>
-        <th class="w-20">ID</th>
-        <th>Nota</th>
-        <th>Valor</th>
-        <th>Descuenta</th>
-        <th>Fecha y Hora</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let expense of expenses()">
-        <td>{{ expense.id }}</td>
-        <td>{{ expense.description }}</td>
-        <td>{{ expense.value | currency : "symbol" : "$" : "0.00" }}</td>
-        <td>
-          {{ expense.discount ? "Aplica" : "-" }}
-        </td>
-        <td>{{ expense.createdDate | date : "dd/MM/yyyy, hh:mm a" }}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<app-custom-table [table]="table" />
