--- a/src/app/modules/portal/pages/home/pages/transactions/components/transactions-table/transactions-table.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/components/transactions-table/transactions-table.component.html
@@ -1,28 +1,1 @@
-<div class="table">
-  <table>
-    <thead>
-      <tr>
-        <th class="id">ID</th>
-        <th>Nota</th>
-        <th>Tipo</th>
-        <th class="text-right">Valor</th>
-        <th class="text-right">Adicional</th>
-        <th>Hora</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let transaction of details()">
-        <td class="id">{{ transaction.id }}</td>
-        <td>{{ transaction.description }}</td>
-        <td>{{ transaction.type | transactionDetailType }}</td>
-        <td class="text-right">
-          {{ transaction.value | currency : "symbol" : "$" : "0.00" }}
-        </td>
-        <td class="text-right">
-          {{ transaction.commission | currency : "symbol" : "$" : "0.00" }}
-        </td>
-        <td>{{ transaction.date | date : "hh:mm a" }}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<app-custom-table [table]="table" />
