--- a/src/app/modules/portal/pages/reports/components/transactions-table/transactions-table.component.html
+++ b/src/app/modules/portal/pages/reports/components/transactions-table/transactions-table.component.html
@@ -1,30 +1,1 @@
-<div class="table">
-  <table>
-    <thead>
-      <tr>
-        <th class="id">ID</th>
-        <th>Nota</th>
-        <th>Tipo</th>
-        <th>Valor</th>
-        <th>Adicional</th>
-        <th>Fecha y Hora</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let transaction of transactions">
-        <td class="id">{{ transaction.id }}</td>
-        <td>{{ transaction.description }}</td>
-        <td>{{ transaction.type | transactionDetailType }}</td>
-        <td class="text-right">
-          {{ transaction.value | currency : "symbol" : "$" : "0.00" }}
-        </td>
-        <td class="text-right">
-          {{ transaction.commission | currency : "symbol" : "$" : "0.00" }}
-        </td>
-        <td>
-          {{ transaction.createdDate | date : "dd/MM/yyyy, hh:mm a" }}
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<app-custom-table [table]="table" />
