--- a/src/app/modules/portal/pages/reports/reports.component.html
+++ b/src/app/modules/portal/pages/reports/reports.component.html
@@ -1,6 +1,6 @@
 <app-loading *ngIf="loading(); else page" />
-<ng-template #page
-  ><app-header-title
+<ng-template #page>
+  <app-header-title
     hTitle="Reportes"
     hDescription="Checa todos los movimientos que realizaste durante el día"
   />
