--- a/src/app/modules/portal/pages/home/pages/transfers/components/cash-transfers-table/cash-transfers-table.component.html
+++ b/src/app/modules/portal/pages/home/pages/transfers/components/cash-transfers-table/cash-transfers-table.component.html
@@ -1,23 +1,1 @@
-<div class="table">
-  <table>
-    <thead>
-      <tr>
-        <th class="id">ID</th>
-        <th>Valor</th>
-        <th>Servicio</th>
-        <th>Hora</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let transfer of cashTransfers()">
-        <td class="id">{{ transfer.id }}</td>
-        <td>
-          {{ transfer.received ? "+" : "-"
-          }}{{ transfer.value | currency : "symbol" : "$" : "0.00" }}
-        </td>
-        <td>{{ transfer.received ? transfer.sender : transfer.receiver }}</td>
-        <td>{{ transfer.createdDate | date : "hh:mm aa" }}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<app-custom-table [table]="table" />
