--- a/src/app/modules/portal/pages/reports/components/expenses-table/expenses-table.component.html
+++ b/src/app/modules/portal/pages/reports/components/expenses-table/expenses-table.component.html
@@ -1,28 +1,1 @@
-<div class="table">
-  <table>
-    <thead>
-      <tr>
-        <th class="id">ID</th>
-        <th>Descripción</th>
-        <th>Valor</th>
-        <th>Hora</th>
-        <th>Actualizado</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let expense of expenses">
-        <td class="id">{{ expense.id }}</td>
-        <td>{{ expense.description }}</td>
-        <td class="text-right">
-          {{ expense.value | currency : "symbol" : "$" : "0.00" }}
-        </td>
-        <td class="text-left">
-          {{ expense.createdDate | date : "H:mm:ss" }}
-        </td>
-        <td class="text-left">
-          {{ expense.modifiedDate | date : "H:mm:ss" }}
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<app-custom-table [table]="table" />
