update: center no data message p element on custom table component

--- a/src/app/modules/shared/components/custom-table/custom-table.component.html
+++ b/src/app/modules/shared/components/custom-table/custom-table.component.html
@@ -1,5 +1,7 @@
 <ng-template #noData>
-  <p class="text-center text-gray-700 text-xl py-6">
+  <p
+    class="flex items-center justify-center w-full h-full text-center text-gray-700 text-xl py-6 px-5"
+  >
     {{ table.noDataMessage }}
   </p>
 </ng-template>
