--- a/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/cash-register-details-modal/cash-register-details-modal.component.css
+++ b/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/cash-register-details-modal/cash-register-details-modal.component.css
@@ -1,3 +1,3 @@
 .item {
-  @apply text-lg text-gray-700 px-5 py-2.5 hover:bg-violet-100 cursor-pointer;
+  @apply text-lg text-gray-700 px-5 py-2.5 rounded-md hover:bg-violet-100 cursor-pointer;
 }
