update: modal size and table properties

--- a/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/cash-register-details-modal/cash-register-details-modal.component.html
+++ b/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/cash-register-details-modal/cash-register-details-modal.component.html
@@ -1,26 +1,36 @@
 <dialog
   #modal
-  class="z-40 w-[calc(100vw_-_15%)] max-h-fit px-4 py-5 rounded-lg outline-none backdrop:bg-black backdrop:bg-opacity-30 backdrop:backdrop-blur-sm"
+  class="w-[calc(100vw_-_15%)] h-[calc(100vh_-_24%)] px-4 py-5 rounded-lg outline-none backdrop:bg-black backdrop:bg-opacity-30 backdrop:backdrop-blur-sm"
 >
-  <div class="absolute -right-2 -top-2 z-50">
-    <app-icon-button type="button" [icon]="faClose" />
-  </div>
-  <header class="mb-4 border-b border-gray-400 pb-3">
-    <h2 class="text-center text-gray-800 text-3xl font-medium">
+  <header class="mb-4 border-b border-gray-400 pb-4 grid grid-cols-3">
+    <h2 class="text-center text-gray-800 text-3xl font-medium col-start-2">
       Caja Registradora N°
       {{ reports()?.reports?.cashRegisterDetail?.cashRegister?.numeral ?? 0 }}
     </h2>
+    <button
+      type="button"
+      class="col-start-3 justify-self-end self-center text-gray-500 text-3xl font-bold w-9 h-9 outline-none hover:bg-gray-200 hover:text-gray-600 rounded-full duration-200"
+      (click)="close()"
+    >
+      X
+    </button>
   </header>
-  <ul class="flex items-center justify-center gap-1">
-    <ng-container *ngFor="let item of types; index as i">
-      <li class="item" (click)="setSelectedType(item.type)">
-        {{ item.title }}
-      </li>
-      <div class="h-8 w-px bg-violet-100" *ngIf="i < types.length - 1"></div>
-    </ng-container>
-  </ul>
-  <div class="divider my-4"></div>
-  <div class="max-h-80 overflow-y-auto">
+  <div>
+    <ul class="flex items-center justify-center gap-2.5">
+      <ng-container *ngFor="let item of types; index as i">
+        <li
+          class="item"
+          [ngClass]="{ 'bg-violet-50': selectedType() === item.type }"
+          (click)="setSelectedType(item.type)"
+        >
+          {{ item.title }}
+        </li>
+        <div class="h-8 w-px bg-violet-100" *ngIf="i < types.length - 1"></div>
+      </ng-container>
+    </ul>
+    <div class="divider my-4"></div>
+  </div>
+  <div class="h-[70%] overflow-y-auto">
     <app-detailed-transactions-table
       *ngIf="selectedType() === 'TRANSACTIONS'"
       [transactions]="reports()?.transactions?.transactions"
