update: modal's border radius

--- a/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/cash-register-details-modal/cash-register-details-modal.component.html
+++ b/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/cash-register-details-modal/cash-register-details-modal.component.html
@@ -1,6 +1,6 @@
 <dialog
   #modal
-  class="w-[calc(100vw_-_15%)] h-[calc(100vh_-_24%)] px-4 py-5 rounded-lg outline-none backdrop:bg-black backdrop:bg-opacity-30 backdrop:backdrop-blur-sm"
+  class="w-[calc(100vw_-_15%)] h-[calc(100vh_-_24%)] px-4 py-5 rounded-2xl outline-none backdrop:bg-black backdrop:bg-opacity-30 backdrop:backdrop-blur-sm"
 >
   <header class="mb-4 border-b border-gray-400 pb-4 grid grid-cols-3">
     <h2 class="text-center text-gray-800 text-3xl font-medium col-start-2">
