feat: display cash register detail hours

--- a/src/app/modules/portal/pages/home/pages/expenses/components/new-expense-form/new-expense-form.component.html
+++ b/src/app/modules/portal/pages/home/pages/expenses/components/new-expense-form/new-expense-form.component.html
@@ -25,8 +25,8 @@
       />
     </div>
     <small
-      class="text-center font-medium text-sm text-red-700"
-      [ngClass]="discount() ? 'block' : 'hidden'"
+      class="text-center font-medium text-sm text-red-700 -mb-3"
+      [ngClass]="discount() ? 'block' : 'invisible'"
     >
       (Será descontado de su nómina)
     </small>
