--- a/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/cash-register-details.component.html
+++ b/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/cash-register-details.component.html
@@ -1,7 +1,29 @@
 <app-loading *ngIf="loading(); else page" />
 <ng-template #page>
   <div class="pt-6"></div>
-  <app-header-stats [reports]="reports()?.reports" (open)="openModal()" />
-  <div class="divider mt-7 mb-5"></div>
+  <app-header-stats [reports]="reports" (open)="openModal()" />
+  <article class="mt-10">
+    <header class="border-y-4 border-violet-200 py-3">
+      <h3 class="text-gray-700 text-4xl text-center font-medium">
+        {{ cashier }}
+      </h3>
+    </header>
+    <div class="mt-3 flex items-center gap-5 justify-center">
+      <app-hour-stat
+        [time]="details?.initialWorking"
+        tooltip="Hora de Entrada"
+      />
+      <app-hour-stat
+        [time]="details?.initialBreak"
+        tooltip="Entrada de Almuerzo"
+      />
+      <app-hour-stat
+        [time]="details?.finalBreak"
+        tooltip="Salida de Almuerzo"
+      />
+      <app-hour-stat [time]="details?.finalWorking" tooltip="Hora de Salida" />
+    </div>
+    {{ reports?.transactionsAmount ?? 0 }}
+  </article>
 </ng-template>
-<app-cash-register-details-modal [reports]="reports" />
+<app-cash-register-details-modal [reports]="detailedReports" />
