--- a/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/cash-register-details.component.html
+++ b/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/cash-register-details.component.html
@@ -2,30 +2,6 @@
 <ng-template #page>
   <div class="pt-6"></div>
   <app-header-stats [reports]="reports" (open)="openModal()" />
-  <section class="mt-10">
-    <header class="border-y-4 border-violet-200 py-3">
-      <h3 class="text-gray-700 text-4xl text-center font-medium">
-        {{ cashier }}
-      </h3>
-    </header>
-    <div class="mt-3 flex items-center gap-5 justify-center">
-      <app-hour-stat
-        [time]="details?.initialWorking"
-        tooltip="Hora de Entrada"
-      />
-      <hr class="h-10 w-0.5 bg-gray-200" />
-      <app-hour-stat
-        [time]="details?.initialBreak"
-        tooltip="Entrada de Almuerzo"
-      />
-      <hr class="h-10 w-0.5 bg-gray-200" />
-      <app-hour-stat
-        [time]="details?.finalBreak"
-        tooltip="Salida de Almuerzo"
-      />
-      <hr class="h-10 w-0.5 bg-gray-200" />
-      <app-hour-stat [time]="details?.finalWorking" tooltip="Hora de Salida" />
-    </div>
-  </section>
+  <app-cashier-hour-stats [cashier]="cashier" [details]="details" />
 </ng-template>
 <app-cash-register-details-modal [reports]="detailedReports" />
